<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">邀请助手</string>
    <string name="action_settings">Settings</string>
    <string name="btn_invite">邀请好友</string>
    <string name="btn_sms_invite">短信邀请</string>
    <string name="btn_mail_invite">邮件邀请</string>
    <string name="btn_recommend">微博推荐</string>
    <string name="btn_qrcode_invite">二维码邀请</string>
    <string name="btn_sure">确定</string>
    <string name="btn_cancle">取消</string>
    <string name="weibo_share_top_bar">分享</string>
    <string name="btn_share">立即分享</string>
    <string name="weio_editor_hint">请输入要分享到微博的内容</string>

</resources>
